--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 20vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -35,4 +35,25 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.flex-container {
+  margin: 10px;
+  padding: 15px;
+  border-radius: 5px;
+  background: #60B99A;
+  display: inline-flex;
+  justify-content: space-around;
+  flex-direction: column;
+
+}
+
+.flex-item {
+  margin: 10px;
+  padding: 20px;
+  color: #fff;
+  text-align: center;
+  border-radius: 5px;
+  background: #4584b1;
+  float: left;
 }
