--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  text-align: center;
+text-align: center;
 }
 
 .App-logo {
@@ -83,3 +83,63 @@
   opacity: 1;
   visibility: visible;
 }
+
+.share-link-container{
+  text-align: center;
+  margin: 10px;
+  padding: 15px;
+  border-radius: 5px;
+  
+  display:flex;
+  justify-content: space-around;
+  flex-direction: row;
+  flex-wrap: wrap;
+
+}
+.share-link-item{
+  padding: 5px 20px 5px 50px;
+  margin: 0 auto;
+  box-sizing: border-box;
+  max-width: 300px;
+  position: relative;
+  border-radius: 6px;
+  list-style: none;
+  float: left;
+}
+.fa {
+  padding: 5px 20px 5px 50px;
+  font-size: 30px;
+  width: auto;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  display:block;
+  box-sizing: border-box;
+  max-width: 300px;
+  position: relative;
+  border-radius: 6px;
+}
+
+.fa:hover {
+    opacity: 0.7;
+}
+
+.facebook{
+  background: #3B5998;
+  color: white;
+}
+
+.twitter{
+  background: #55ACEE;
+  color: white;
+}
+
+.linkedin{
+  background: #007bb5;
+  color: white;
+}
+
+[class^="fa"]{
+  padding:10px
+}
+
